# SAT-Solver-for-Vertex-Cover-Problem

./: README.md
prj-ece650-2/: ApproxVC1VC2Graph.py  CMakeLists.txt  Graph.cpp  VertexCoverAlgo.cpp  VertexCoverAlgo.h  approxRatio.py  cnfSatGraph.py  prj-ece650.cpp  user.yml
